--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "description": "A way to more easily test for html selectors",
     "main": "index.js",
     "scripts": {
-        "start": "git add . && git commit -m 'updated' && git push && npm publish"
+        "docs": "cd .. && node save.js --folder html_baseTest",
+        "updateVersion": "npm version minor",
+        "commitThis": "git add . && git commit -m 'updated' && git push",
+        "start": "npm run commitThis &&  npm run updateVersion && npm publish",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
         "html",
